two-tier-web-app-v3/REGION-US-EAST-1-SOURCE-VPC/security.tf
resource "aws_security_group" "instance_1" {
  name        = "DRS-SOURCE-VPC-INSTANCE-1"
  description = "Allows HTTP and SSH access"
  vpc_id      = aws_vpc.this.id

  ingress {
    description = "Allow SSH connection"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow MySQL connection"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow egress connection"
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "DRS-SOURCE-VPC-INSTANCE-1"
  }
}
